feat: [stabled] [done] [tested] New branch for Java8 + Spring Boot 2.6.4 + Cucumber 7.12.0